# XenAdminQt

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/: copilot-instructions.md
.github/workflows/: build.yml  release.yml
debian/: changelog  control  copyright  install  rules  xenadmin-qt.desktop
docs/: actions.md  core_concepts.md  status.md  version.md  xapi.md  xapi_list.md
packaging/: README.md  config  package-appimage.sh  package-deb.sh  package-dmg.sh  package-rpm.sh  package-win.ps1
packaging/macos/: xenadmin.icns
src/: xenadminqt.pro
src/xenadmin-ui/: CMakeLists.txt  connectionprofile.cpp  connectionprofile.h  globals.h  iconmanager.cpp  iconmanager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindowtreebuilder.cpp  mainwindowtreebuilder.h  placeholderwidget.cpp  placeholderwidget.h  resources.qrc  selectionmanager.cpp  selectionmanager.h  settingsmanager.cpp  settingsmanager.h  titlebar.cpp  titlebar.h  xenadmin-ui.pro  xenadminqt.qmake
src/xenadmin-ui/ConsoleView/: ConsoleKeyHandler.cpp  (+16 more)
src/xenlib/: CMakeLists.txt  grouping.cpp  grouping.h  groupingtag.cpp  groupingtag.h  metricupdater.cpp  metricupdater.h  query.cpp  query.h  queryfilter.cpp  queryfilter.h  queryscope.cpp  queryscope.h  search.cpp  search.h  vmhelpers.cpp  vmhelpers.h  xencache.cpp  xencache.h  xenlib.cpp  xenlib.h  xenlib.pro  xenlib.qmake  xenlib_global.h
tests/: tests.pro
tests/xenadmin-ui/: test_main.cpp  xenadmin-ui-tests.pro
tests/xenlib/: test_helpers.cpp  test_helpers.h  test_main.cpp  testdata.qrc  xenlib-tests.pro
(+1272 files in other folders)
